# ORVIKO

./: .gitignore  AI_PROMPTING_FRAMEWORK.md  FITUR-ODIN-TIKTOK-SLIDE.md  README.md  Script Planning.txt  app-flow.md  backend-setup.md  ex-draft.md  index.html  knowledge-base.md  momen.md  package-lock.json  referensi-desain.md  script.html  source-situasi.md
server/: pyproject.toml  uvicorn_app.py
server/app/: main.py  schemas.py
server/app/core/: config.py  db.py
server/app/db/: __init__.py  connection.py  files.py  migrations.py
server/app/db/repositories/: _utils.py  payments.py  scripts.py  slides.py  users.py
server/app/prompting/: __init__.py  builder.py  contracts.py  modules.py  specs.py  validators.py
server/app/routes/: __init__.py  auth.py  payments.py  script.py  slides.py
server/app/schemas/: __init__.py  payment.py  script.py  slides.py
server/app/services/: genai_client.py  payment_service.py  script_service.py
server/tests/: test_genai_client.py  test_prompting_builder.py
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/app/checkout/: page.tsx
web/app/contact/: page.tsx
web/app/history/: page.tsx
web/app/home/: page.tsx
web/app/payment/: page.tsx
web/app/script/: page.tsx
web/app/slides/: page.tsx
web/app/terms/: page.tsx
web/features/checkout/: CheckoutPage.tsx
web/features/common/: SiteInfoFooter.tsx
web/features/contact/: ContactPage.tsx
web/features/legal/: TermsPage.tsx
web/lib/: api.ts
web/prisma/: dev.db
(+10 files in other folders)
